--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
        <input type="text" name="NAME"><br><br>
        
         <lable><font color=white>SHIFT:</lable>
-        <input type="radio" name="SHIFT" value="A"><lable><font color=white>A</lable>
+        <input type="radio" name="SHIFT" value="M"><lable><font color=white>M</lable>
       <input type="radio" name="SHIFT" value="B"><lable><font color=white>B</lable>
-         <input type="radio" name="SHIFT" value="C"><lable><font color=white>C</lable><br><br>
+         <input type="radio" name="SHIFT" value="N"><lable><font color=white>N</lable><br><br>
          
          <lable><font color=white>Remark:</lable>
          <input type="text" name="Remark" Remark><br><br>
