--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div id="button-container">
   <center>
           <a href="https://docs.google.com/spreadsheets/d/1bmyePTUMMiR3bKr1yERN4mBES4BezC6-GfQ6_dNu0dc/edit?usp=sharing" class="transparent-button">Find data</a>
-             <a href="https://subhom1234.github.io/Record-/" class="transparent-button">LOG OUT</a>
+             <a href="https://subhom1234.github.io/Record/" class="transparent-button">LOG OUT</a>
           </center>
       
 
